# minimum_working_code

./: README.md
onnxruntime/: CMakeLists.txt  main.cpp
